# flat

./: .appveyor.yml  .clang-format  .editorconfig  .gitignore  .travis.yml  .vimrc  CMakeLists.txt  CODE_OF_CONDUCT.md  Doxyfile  LICENSE.txt  Makefile  README.md  codecov.yml  doxygen.conf
cmake/: FindCCache.cmake  build_header.cmake
docs/: _algorithm_8h.html  _algorithm_8h_source.html  _animation_8cpp.html  _animation_8cpp_source.html  _animation_8h.html  _animation_8h_source.html  _button_8cpp.html  _button_8cpp_source.html  _button_8h.html  _button_8h_source.html  _camera_8cpp.html  _camera_8cpp_source.html  _camera_8h.html  _camera_8h_source.html  _collision_detector_8cpp.html  _collision_detector_8cpp_source.html  _collision_detector_8h.html  _collision_detector_8h_source.html  _collision_property_8h.html  _collision_property_8h_source.html  _deltatime_monitor_8cpp.html  _deltatime_monitor_8cpp_source.html  _deltatime_monitor_8h.html  _deltatime_monitor_8h_source.html  _dimension_8h.html  _dimension_8h_source.html  _entity_8cpp.html  _entity_8cpp_source.html  _entity_8h.html  _entity_8h_source.html  _entity_container_8cpp.html  _entity_container_8cpp_source.html  _entity_container_8h.html  _entity_container_8h_source.html  _entity_properties_8cpp.html  _entity_properties_8cpp_source.html  _entity_properties_8h.html  _entity_properties_8h_source.html  _entity_shape_8h.html  _entity_shape_8h_source.html  (+184 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  defines_0.js  enums_0.js  enums_1.js  (+61 more)
src/: .Timer.cpp.swp  Algorithm.h  Animation.cpp  Animation.h  Button.cpp  Button.h  Camera.cpp  Camera.h  CollisionDetector.cpp  CollisionDetector.h  CollisionProperty.h  Database.cpp  Database.h  DeltatimeMonitor.cpp  DeltatimeMonitor.h  Dimension.h  Entity.cpp  Entity.h  Entity.h.orig  EntityContainer.cpp  EntityContainer.h  EntityProperties.cpp  EntityProperties.h  EntityShape.h  FlatBuilder.cpp  FlatBuilder.h  GameController.cpp  GameController.h  GameControllerContainer.cpp  GameControllerContainer.h  GameData.h  GameEngine.cpp  GameEngine.h  MapArea.h  MediaUtil.cpp  MediaUtil.h  Mixer.cpp  Mixer.h  QuadTree.cpp  QuadTree.h  (+16 more)
testsrc/: AlgorithmTest.cpp  AnimationTest.cpp  ButtonTest.cpp  CameraTest.cpp  CollisionDetectorTest.cpp  DeltatimeMonitorTest.cpp  EntityContainerTest.cpp  EntityImpl.h  EntityPropertiesTest.cpp  EntityTest.cpp  QuadTreeTest.cpp  SquareTest.cpp  UIDTest.cpp  catch.hpp
util/: format_project_code.sh
